[package]
name = "pumpfun-forking"
version = "0.1.0"
description = "Created with Anchor"
author = "Harry Anderson"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumpfun_forking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-amm-cpi/devnet"]
anchor-debug = []
custom-heap = []

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = { version = "=0.30.1", features = [
  "associated_token",
  "token",
  "metadata",
] }
raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.30.1" }
